--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -21,14 +21,15 @@ body{
     background-image: url('../img/background2.jpg');
     background-repeat: no-repeat;
     background-size:cover;
-    background-position: fixed;
     background-attachment: fixed;
     color:white;
-    height:100vh;
+    height:max-content;
     width:100vw;
+    height:100vh;
     font-family: Yantramanav;
     display:flex;
     flex-flow:column;
+    overflow-x:hidden;
 }
 header{
     display:flex;
@@ -37,6 +38,10 @@ header{
     text-transform: uppercase;
     font-size:20px;
     height:10vh;
+}
+main{
+    max-height:85vh;
+    padding: 15px 0;
 }
 h2{
     font-family: Amiri;
@@ -66,6 +71,11 @@ input[readonly]{
     transition: all 0.5s ease;
     font-family: Yantramanav;
 }
+span{
+    font-size: 16px;
+    color: #EB1A63;
+    font-family:Amiri;
+}
 .boton:hover{
     background-color: #8D7DFA;
     cursor: pointer;
@@ -75,13 +85,22 @@ input[readonly]{
     width:100px;
 }
 footer{
+    justify-self: flex-end;
     background-color:black;
+    display:block;
+    position:fixed;
+    bottom:0;
+    width:100%;
+    height:5vh;
+    margin-bottom: 0;
+}
+.contenidoFooter{
+    width:100%;
+    height:100%;
     display:flex;
     justify-content: space-around;
     align-items: center;
-    position:absolute;
-    bottom:0;
-    width:100%;
+    
 }
 /*PROVISIONAL*/
 footer img{
