--- a/webroot/css/miCuenta.css
+++ b/webroot/css/miCuenta.css
@@ -4,15 +4,40 @@ main{
     align-items: center;
     justify-content: space-around;
     text-align: center;
+    overflow-y:auto;
+    
 }
-td{
-    padding:10px;
-}
-form div{
+form{
     display:flex;
+    justify-content: space-around;
+    flex-flow: row wrap;
+    width:90vw;
+    gap: 10px;
+}
+.campo{
+    display:flex;
+    flex-flow:column;
+    align-items:center;
+    justify-content: space-around;
+    width: 30%;
+}
+.campoImagen{
+    align-self: flex-end;
+    flex-basis: 100%;
+    display:flex;
+    align-items:center;
     justify-content: center;
+    gap:15px;
+}
+.botones{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 .boton{
     width: 150px;
+    height: 75px;
     margin: 5px;
 }
+
