--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -15,7 +15,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html, body {
+    height: 100%;
+}
 body{
     background-color: black;
     background-image: url('../img/background2.jpg');
@@ -25,11 +27,11 @@ body{
     color:white;
     height:max-content;
     width:100vw;
-    height:100vh;
+    /*height:100vh;*/
     font-family: Yantramanav;
     display:flex;
     flex-flow:column;
-    overflow-x:hidden;
+    /*overflow-x:hidden;*/
 }
 header{
     display:flex;
@@ -40,8 +42,8 @@ header{
     height:10vh;
 }
 main{
-    max-height:85vh;
-    padding: 15px 0;
+    flex: 1 0 auto;
+    margin: 10px;
 }
 h2{
     font-family: Amiri;
@@ -88,11 +90,12 @@ footer{
     justify-self: flex-end;
     background-color:black;
     display:block;
-    position:fixed;
+   position:fixed;
     bottom:0;
     width:100%;
     height:5vh;
     margin-bottom: 0;
+    flex-shrink: 0;
 }
 .contenidoFooter{
     width:100%;
