--- a/webroot/css/inicioPublico.css
+++ b/webroot/css/inicioPublico.css
@@ -3,9 +3,8 @@ main{
     flex-flow: column;
     justify-content: space-around;
     align-items: center;
-    /*gap: 48px;*/
-    height:90vh;
-    width:100vw;
+    gap: 72px;
+    height:fit-content;
 }
 .titulo{
     display:flex;
@@ -21,6 +20,7 @@ main{
     justify-content: center;
     gap: 10px;
     width:100%;
+    height:fit-content;
 }
 .tarjeta{
     background-color: black;
@@ -32,7 +32,8 @@ main{
     font-size: 28px;
     padding:10px 15px;
     width:23%;
-    height:100%;
+    min-width: 250px;
+    height:200px;
     line-height:100%;
     display:flex;
     flex-flow:column;
