--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -26,7 +26,7 @@ body{
     background-attachment: fixed;
     color:white;
     height:max-content;
-    width:100vw;
+    max-width:100vw;
     /*height:100vh;*/
     font-family: Yantramanav;
     display:flex;
@@ -43,7 +43,7 @@ header{
 }
 main{
     flex: 1 0 auto;
-    margin: 10px;
+    padding-bottom: 50px;
 }
 h2{
     font-family: Amiri;
