27/01/2022 Diagramas en inicio publico Arreglo cambiarPassword Empezar footer nuevo

--- a/webroot/css/cambiarPassword.css
+++ b/webroot/css/cambiarPassword.css
@@ -4,6 +4,7 @@ main{
     align-items: center;
     justify-content: space-around;
     text-align: center;
+    gap: 72px;
 }
 form{
     font-size:24px;
