--- a/webroot/css/REST.css
+++ b/webroot/css/REST.css
@@ -1,10 +1,3 @@
-/*main{
-    display:flex;
-    flex-flow:column;
-    justify-content: center;
-    align-items: center;
-    margin:50px 0;
-}*/
 .resultado{
     margin:auto;
     display:flex;
@@ -15,8 +8,15 @@
     
 }
 .definirRest{
+    background-color: black;
+    border-left: solid dimgrey 5px;
+    border-top: solid dimgrey 1px;
+    border-bottom: solid dimgrey 1px;
+    border-right: solid dimgrey 1px;
     text-align: center;
-    margin:10px 0;
+    margin:10px auto;
+    padding: 10px;
+    width:50%;
 }
 .libro{
     background-color: black;
@@ -33,16 +33,13 @@
     align-items:flex-start;
     gap:15px;
 }
-/*.libro *{
-    margin:auto;
-}*/
-.libro:hover{
+.libro:hover, .definirRest:hover{
     border-left: solid lightgrey 5px;
     border-top: solid lightgrey 1px;
     border-bottom: solid lightgrey 1px;
     border-right: solid lightgrey 1px;
 }
-.libro h3{
+h3{
     font-family: Amiri;
     font-weight: lighter;
     font-size:24px;
@@ -84,4 +81,5 @@ form{
     display:flex;
     justify-content:center;
     margin-bottom: 20px;
+    gap:15px;
 }
