--- a/webroot/css/inicioPublico.css
+++ b/webroot/css/inicioPublico.css
@@ -46,11 +46,47 @@ main{
     border-bottom: solid lightgrey 1px;
     border-right: solid lightgrey 1px;
 }
-.tarjeta a{
+a{
     text-decoration: none;
     color: #8D7DFA;
     font-family:Yantramanav;
     font-size:18px;
     font-weight:bold;
     text-transform: uppercase;
+}
+.diagramas{
+    padding-bottom: 50px;
+}
+.diagrama{
+    width:100%;
+    height:500px;
+    background-color:black;
+    display:flex;
+}
+.textoDiagrama{
+    width:60%;
+    padding:20px;
+    display:flex;
+    flex-flow:column;
+    justify-content: space-between;
+}
+.textoDiagrama h2{
+    font-size:40px;
+}
+.textoDiagrama ul{
+    margin-left:50px;
+}
+.imagenDiagrama, .imagenDiagrama img{
+    height:100%;
+}
+.imagenDiagrama{
+    width:40%;
+}
+.imagenDiagrama img{
+    width:100%;
+}
+.diagrama:nth-child(2n){
+    background-color:white;
+    color:black;
+    flex-direction: row-reverse;
 }
