--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -44,6 +44,7 @@ header{
 main{
     flex: 1 0 auto;
     padding-bottom: 50px;
+    min-height:85vh;
 }
 h2{
     font-family: Amiri;
@@ -90,8 +91,8 @@ footer{
     justify-self: flex-end;
     background-color:black;
     display:block;
-   position:fixed;
-    bottom:0;
+    /*position:fixed;
+    bottom:0;*/
     width:100%;
     height:5vh;
     margin-bottom: 0;
