--- a/webroot/css/inicioPublico.css
+++ b/webroot/css/inicioPublico.css
@@ -46,11 +46,11 @@ main{
     border-bottom: solid lightgrey 1px;
     border-right: solid lightgrey 1px;
 }
-a{
+.tarjeta a, .textoDiagrama a{
     text-decoration: none;
     color: #8D7DFA;
     font-family:Yantramanav;
-    font-size:18px;
+    font-size:16px;
     font-weight:bold;
     text-transform: uppercase;
 }
