--- a/webroot/css/REST.css
+++ b/webroot/css/REST.css
@@ -1,10 +1,20 @@
-.resultado{
-    margin:auto;
+.mainRest{
     display:flex;
+    justify-content:space-around;
+    align-items: flex-start;
+    flex-flow:row wrap;
+}
+.api{
+    flex-basis:50%;
+}
+.resultado{
+    margin: 0 auto;
+    display:flex;
+    justify-content: flex-start;
     align-items: center;
     flex-flow: column;
     gap:10px;
-    max-width:100vw;
+    width:40%;
     
 }
 .definirRest{
@@ -16,7 +26,8 @@
     text-align: center;
     margin:10px auto;
     padding: 10px;
-    width:50%;
+    width:40%;
+    height: 200px;
 }
 .libro{
     background-color: black;
@@ -77,9 +88,42 @@ h3{
     width:92%;
 }
 form{
+    flex-basis:100%;
     width:100%;
     display:flex;
-    justify-content:center;
+    flex-flow:row wrap;
+    justify-content:space-between;
     margin-bottom: 20px;
+    padding:50px;
     gap:15px;
+    height:10%;
+}
+.cuadroBusqueda{
+    display:flex;
+    justify-content: space-around;
+    flex-basis:50%;
+}
+.botonVolver{
+    flex-basis: 100%;
+    width:100vw;
+    display:flex;
+    justify-content: center;
+}
+.tiempo{
+    display:flex;
+    background-color: black;
+    border-left: solid dimgrey 5px;
+    border-top: solid dimgrey 1px;
+    border-bottom: solid dimgrey 1px;
+    border-right: solid dimgrey 1px;
+    width:90%;
+    padding:10px;
+    gap:10px;
+    height:100px;
+}
+.tiempo .icono{
+    height: 100%;
+}
+.icono img{
+    height:100%;
 }
