--- a/webroot/css/REST.css
+++ b/webroot/css/REST.css
@@ -25,9 +25,14 @@
     border-right: solid dimgrey 1px;
     text-align: center;
     margin:10px auto;
-    padding: 10px;
+    padding: 15px;
     width:40%;
-    height: 200px;
+    height: fit-content;
+    display:flex;
+    flex-flow:column;
+    justify-content: space-between;
+    transition: all 0.5s ease;
+    gap: 15px;
 }
 .libro{
     background-color: black;
