--- a/webroot/css/REST.css
+++ b/webroot/css/REST.css
@@ -132,3 +132,18 @@ form{
 .icono img{
     height:100%;
 }
+.error{
+    background-color: #87012B;
+    border-left: solid dimgrey 5px;
+    border-top: solid dimgrey 1px;
+    border-bottom: solid dimgrey 1px;
+    border-right: solid dimgrey 1px;
+    width:90%;
+    max-height:200px;
+    padding:10px;
+    transition: all 0.5s ease;
+}
+.errorValidacion{
+    color: #EB3755;
+    padding:10px;
+}
