--- a/webroot/css/mtoDepartamentos.css
+++ b/webroot/css/mtoDepartamentos.css
@@ -1,4 +1,3 @@
-
 .departamentos{
     width:100%;
     display:flex;
@@ -7,6 +6,12 @@
     padding:15px;
     
 }
+form{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    gap:25px;
+}
 .departamento{
     background-color: black;
     border-left: solid dimgrey 5px;
@@ -14,6 +19,21 @@
     border-bottom: solid dimgrey 1px;
     border-right: solid dimgrey 1px;
     padding:10px;
+}
+.botones{
+    display:flex;
+}
+.departamento .boton{
+    margin:10px;
+    height:50px;
+    width:50px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.departamento .boton img{
+    height:25px;
+    width:25px;
 }
 h3{
     font-size:24px;
