15/02/2022 Recuperacion de mantenimiento de usuarios (no te borres porfa)

--- a/webroot/css/mtoUsuarios.css
+++ b/webroot/css/mtoUsuarios.css
@@ -4,16 +4,20 @@
     align-items:center;
     gap:25px;
 }
-.resultado{
+#container{
     width:90%;
 }
-#usuarios{
+.tablaUsuarios{
     width:100%;
     background:black;
     text-align:center;
     font-size:20px;
+    margin:0;
 }
-#usuarios,td,th{
+#usuarios{
+    width:100%;
+}
+.tablaUsuarios,td,th{
     border:solid white 1px;
     border-collapse: collapse;
 }
