20/02/2022: Paginación departamentos 100% Modificar descripción mtoUsuarios

--- a/webroot/css/mtoDepartamentos.css
+++ b/webroot/css/mtoDepartamentos.css
@@ -59,3 +59,10 @@ h3{
 .menu *{
     margin:10px;
 }
+button:disabled{
+    border:solid grey 1px;
+}
+button:disabled:hover{
+    cursor: default;
+    background-color: transparent;
+}
