--- a/webroot/css/tecnologias.css
+++ b/webroot/css/tecnologias.css
@@ -25,3 +25,40 @@
     max-width:100px;
     max-height:100px;
 }
+.documentacionDAW{
+    background: black;
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding:25px;
+    gap:20px;
+    
+}
+.tituloDoc{
+    width: 100%;
+    text-align: center;
+}
+.documentacionDAW a{
+    width:30%;
+    text-decoration: none;
+    color:#8D7DFA;
+}
+.archivo{
+    height: 100px;
+    background: black;
+    border: solid dimgray 1px;
+    border-left:solid dimgray 5px;
+    padding:25px;
+    transition: all 0.5s ease;
+}
+.archivo h2{
+    font-size:32px;
+}
+.archivo:hover{
+    border-left: solid lightgrey 5px;
+    border-top: solid lightgrey 1px;
+    border-bottom: solid lightgrey 1px;
+    border-right: solid lightgrey 1px;
+    color:white;
+}
